v3.8.8 (XXXX-XX-XX)
-------------------

* Fix an issue with replication of arangosearch view change entries in single
  server replication and active failover. Previously, when changing the
  properties of existing views, the changes were not properly picked up by
  followers in these setups. Cluster setups were not affected.

* Improve upload and download speed of hotbackup by changing the way we use
  rclone. Empty hash files are now uploaded or downloaded by pattern, and all
  other files are done in batches without remote directory listing, which allows
  rclone to parallelize and avoid a lot of unnecessary network traffic. The
  format of hotbackups does not change at all.

* Updated arangosync to v2.12.0.

* Updated ArangoDB Starter to 0.15.5.

* Do not drop follower shard after too many failed shard synchronization
  attempts.

* Disable optimization rule to avoid crash (BTS-951).

* Fixed SEARCH-366: Fixed extracting sub-attributes using projections for the
  `_id` attribute (e.g. `RETURN doc.sub._id`).

* Fixed BTS-926: UI showing the "create index" form to non-admin users.

* Add progress reporting to RocksDB WAL recovery, in case there are many WAL
  files to recover.

* Web UI: Now correctly handles the server error response when an error occurred
  during the modification of a document or an edge (BTS-934).

* Make graph search case-insensitive (fixes BTS-882).

* Improve error handling for passing wrong transaction ids / cursor ids / pregel
  job ids to request forwarding. Also prevent the error "transaction id not
  found" in cases when request forwarding was tried to a coordinator that was
  recently restarted.

* BTS-907: Fixed some rare SortNode related optimizer issues, when at least two
  or more SortNodes appeared in the AQL execution plan.

* Fixed BTS-852 (user's saved queries used to disappear after updating user
  profile).

* BTS-913: check for proper timezone setup of the system on startup.